getImage() and layout issues

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 
 
+/* backgroound colors: #87CEEB, #800080, #9370DB medium purple is the way*/
+
 body {
-    background-color: #87CEEB;
+    background-color: #9370DB;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
+    color: white;
 }
 
 
@@ -31,7 +34,7 @@ nav {
     font-family: inherit;
     border: none;
     background-color: white;
-    color: #4169E1;
+    color: #FF69B4;              /*#4169E1;*/
     border-radius: 5px;
     font-weight: 700;
 }
@@ -50,20 +53,22 @@ nav {
 .main-cont {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-between; 
     align-items: center;
-    min-height: 350px;
+    min-height: 250px;
+    margin-top: 3em;
 }
 
 
-.main-cont p {
-    font-size: 32px;
+.main-cont h2 {
+    font-weight: 600;
 }
 
 
 .loc-weather {
     display: flex;
     flex-direction: column;
+    margin-bottom: 1em;
 }
 
 .weather-cont {
@@ -84,4 +89,22 @@ nav {
     margin: 0;
 }
 
+
+.img-cont {
+    /* min-height: 350px;
+    max-height: 350px; */
+    height: 450px;
+}
+
+.img {
+    width: 100%;
+    height: 100%;
+}
+
+footer {
+    font-size: 13px;
+    margin-top: 1.6em;
+    width: 100%;
+    text-align: right;
+}
 
